# WebShareee

./: .gitignore  PROJECT_INTRODUCTION.md  README.md  README_zh.md  RELEASE_NOTES.md  nginx.conf  package.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  schemas.py
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  vite.config.js  vite.config.prod.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: AppLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  theme.js
frontend/src/views/: AccountView.vue  HistoryView.vue  HomeView.vue  LoginView.vue  UploadView.vue
jules-scratch/verification/: verify_ui_changes.py
scripts/: build.sh  bump-version.sh  start.sh  stop.sh
