[project]
name = "web-hosting-backend"
version = "0.1.0"
description = "FastAPI backend for Static Web Hosting Service"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "aiofiles",
    "python-multipart",
    "passlib[bcrypt]", 
    "markdown",
]
requires-python = ">=3.11"
[tool.setuptools]
packages = ["app"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
